--- a/sanga-walls-manifest.json
+++ b/sanga-walls-manifest.json
@@ -1,132 +1,124 @@
-{ 
-"category" : [ 
-        { "name" : "Cricket World Cup Wallpapers",
-        "wallpaper" : [ 
-             { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Great Sachin!",
-              "source" : "https://wallpapers99.com/Icc_Cricket_World_Cup_2011--w1600x1200--0--0--images/wallpaper/1600x1200/Icc_Cricket_World_Cup_2011_35471.jpg",
-              "thumbUrl" : "https://wallpapers99.com/Icc_Cricket_World_Cup_2011--w1600x1200--0--0--images/wallpaper/1600x1200/Icc_Cricket_World_Cup_2011_35471.jpg",
-              "url" : "https://wallpapers99.com/Icc_Cricket_World_Cup_2011--w1600x1200--0--0--images/wallpaper/1600x1200/Icc_Cricket_World_Cup_2011_35471.jpg"
-            }, 
-                                { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Englands Paul",
-              "source" : "http://wallpho.com/wp-content/uploads/8589130477679-england-cricket-wallpaper-hd.jpg",
-              "thumbUrl" : "http://wallpho.com/wp-content/uploads/8589130477679-england-cricket-wallpaper-hd.jpg",
-              "url" : "http://wallpho.com/wp-content/uploads/8589130477679-england-cricket-wallpaper-hd.jpg"
-            }, 
-            
-                                { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Sehwag",
-              "source" : "http://stuffpoint.com/indian-cricket/image/49834-indian-cricket-indian-super-fast.jpg",
-              "thumbUrl" : "http://stuffpoint.com/indian-cricket/image/49834-indian-cricket-indian-super-fast.jpg",
-              "url" : "http://stuffpoint.com/indian-cricket/image/49834-indian-cricket-indian-super-fast.jpg"
-            }, 
-            
-                                            { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Travis birt!",
-              "source" : "http://3.bp.blogspot.com/-PUXZ9nnyKBI/T0u_vxzGRzI/AAAAAAAAB6k/NY7LPZWI3cM/s1600/Travis_Birt_Wallpapers.jpg",
-              "thumbUrl" : "http://3.bp.blogspot.com/-PUXZ9nnyKBI/T0u_vxzGRzI/AAAAAAAAB6k/NY7LPZWI3cM/s1600/Travis_Birt_Wallpapers.jpg",
-              "url" : "http://3.bp.blogspot.com/-PUXZ9nnyKBI/T0u_vxzGRzI/AAAAAAAAB6k/NY7LPZWI3cM/s1600/Travis_Birt_Wallpapers.jpg"
-            }, 
-            
-                                            { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Aussies",
-              "source" : "http://4hdwall.com/wp-content/uploads/2012/11/australian-players-hd-wallpapers.jpg",
-              "thumbUrl" : "http://4hdwall.com/wp-content/uploads/2012/11/australian-players-hd-wallpapers.jpg",
-              "url" : "http://4hdwall.com/wp-content/uploads/2012/11/australian-players-hd-wallpapers.jpg"
-            }, 
-            
-                                            { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "The Lions",
-              "source" : "http://images.wallpapersmela.com/2015/01/Sri-Lanka-Cricket-Team-hd.jpg",
-              "thumbUrl" : "http://images.wallpapersmela.com/2015/01/Sri-Lanka-Cricket-Team-hd.jpg",
-              "url" : "http://images.wallpapersmela.com/2015/01/Sri-Lanka-Cricket-Team-hd.jpg"
-            }, 
-               { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Champs",
-              "source" : "http://widewallpapers.info/wp-content/uploads/2014/10/1920-1080_1087-Cricket-Wallpapers-HD-free-wallpapers-backgrounds-images-FHD-4k-download-2014-2015-2016.jpg",
-              "thumbUrl" : "http://widewallpapers.info/wp-content/uploads/2014/10/1920-1080_1087-Cricket-Wallpapers-HD-free-wallpapers-backgrounds-images-FHD-4k-download-2014-2015-2016.jpg",
-              "url" : "http://widewallpapers.info/wp-content/uploads/2014/10/1920-1080_1087-Cricket-Wallpapers-HD-free-wallpapers-backgrounds-images-FHD-4k-download-2014-2015-2016.jpg"
-            }, 
-               { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Pakisthan Team",
-              "source" : "http://cricketchaska.com/wp-content/uploads/2015/01/Pakistan-team-hd-wallpapers-6.jpg",
-              "thumbUrl" : "http://cricketchaska.com/wp-content/uploads/2015/01/Pakistan-team-hd-wallpapers-6.jpg",
-              "url" : "http://cricketchaska.com/wp-content/uploads/2015/01/Pakistan-team-hd-wallpapers-6.jpg"
-            }, 
-                    { "attribution" : null,
-              "author" : "wallpapersmela.com",
-              "author_url" : "https://wallpapersmela.com",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Bangladesh Lions",
-              "source" : "http://images.wallpapersmela.com/2015/01/ICC-Cricket-World-Cup-2015-Bangladesh.jpg",
-              "thumbUrl" : "http://images.wallpapersmela.com/2015/01/ICC-Cricket-World-Cup-2015-Bangladesh.jpg",
-              "url" : "http://images.wallpapersmela.com/2015/01/ICC-Cricket-World-Cup-2015-Bangladesh.jpg"
-            }, 
-                    { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "New Zealands",
-              "source" : "http://cricket15.com/wp-content/uploads/2015/01/New-Zealand-Squad-for-Cricket-World-Cup-2015.jpg",
-              "thumbUrl" : "http://cricket15.com/wp-content/uploads/2015/01/New-Zealand-Squad-for-Cricket-World-Cup-2015.jpg",
-              "url" : "http://cricket15.com/wp-content/uploads/2015/01/New-Zealand-Squad-for-Cricket-World-Cup-2015.jpg"
-            }, 
-            { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-SA-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
-              "name" : "West Indians",
-              "source" : "http://images.wallpapersmela.com/2015/01/West-Indies-Cricket-Wallpapers.jpg",
-              "thumbUrl" : "http://images.wallpapersmela.com/2015/01/West-Indies-Cricket-Wallpapers.jpg",
-              "url" : "http://images.wallpapersmela.com/2015/01/West-Indies-Cricket-Wallpapers.jpg"
-            },
-                        { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-SA-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
-              "name" : "South Africa Heroes",
-              "source" : "http://icc-live.s3.amazonaws.com/cms/media/images/630x420/64689.jpg",
-              "thumbUrl" : "http://icc-live.s3.amazonaws.com/cms/media/images/630x420/64689.jpg",
-              "url" : "http://icc-live.s3.amazonaws.com/cms/media/images/630x420/64689.jpg"
-            }
-        ]
+{
+  "category": [
+    {
+      "name": "Sanga Cricket Wallpapers",
+      "wallpaper": [
+        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Sanga's Look!",
+          "source": "https://lh3.googleusercontent.com/-3B5MFkBu4Q4/VfJSaFpHPcI/AAAAAAAAEJE/_x9uWTi8SaI/s620-Ic42/Kumar_Sangakkara%252520%2525282%252529.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-3B5MFkBu4Q4/VfJSaFpHPcI/AAAAAAAAEJE/_x9uWTi8SaI/s620-Ic42/Kumar_Sangakkara%252520%2525282%252529.jpg",
+          "url": "https://lh3.googleusercontent.com/-3B5MFkBu4Q4/VfJSaFpHPcI/AAAAAAAAEJE/_x9uWTi8SaI/s620-Ic42/Kumar_Sangakkara%252520%2525282%252529.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Sanga the legend",
+          "source": "https://lh3.googleusercontent.com/-uLAaE_3DEY4/VfJSbxuE9xI/AAAAAAAAEJM/4erPYm880iE/s540-Ic42/483087065_1396828681_540x540.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-uLAaE_3DEY4/VfJSbxuE9xI/AAAAAAAAEJM/4erPYm880iE/s540-Ic42/483087065_1396828681_540x540.jpg",
+          "url": "https://lh3.googleusercontent.com/-uLAaE_3DEY4/VfJSbxuE9xI/AAAAAAAAEJM/4erPYm880iE/s540-Ic42/483087065_1396828681_540x540.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Worried Sanga",
+          "source": "https://lh3.googleusercontent.com/-OmeQzFikNes/VfJSd0MFUoI/AAAAAAAAEJU/0bci4UfKncY/s576-Ic42/220361.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-OmeQzFikNes/VfJSd0MFUoI/AAAAAAAAEJU/0bci4UfKncY/s576-Ic42/220361.jpg",
+          "url": "https://lh3.googleusercontent.com/-OmeQzFikNes/VfJSd0MFUoI/AAAAAAAAEJU/0bci4UfKncY/s576-Ic42/220361.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Proud Sri Lankan Lion",
+          "source": "https://lh3.googleusercontent.com/-ovEgHG8vbCw/VfJSh4W5C_I/AAAAAAAAEJc/GI4Zi799l3s/s720-Ic42/Kumar_Sangakkara.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-ovEgHG8vbCw/VfJSh4W5C_I/AAAAAAAAEJc/GI4Zi799l3s/s720-Ic42/Kumar_Sangakkara.jpg",
+          "url": "https://lh3.googleusercontent.com/-ovEgHG8vbCw/VfJSh4W5C_I/AAAAAAAAEJc/GI4Zi799l3s/s720-Ic42/Kumar_Sangakkara.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Keeper Sanga",
+          "source": "https://lh3.googleusercontent.com/-sXjqTkMUohk/VfJSkvyI-dI/AAAAAAAAEJk/Waum2493YRI/s651-Ic42/Kumar-Sangakkara.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-sXjqTkMUohk/VfJSkvyI-dI/AAAAAAAAEJk/Waum2493YRI/s651-Ic42/Kumar-Sangakkara.jpg",
+          "url": "https://lh3.googleusercontent.com/-sXjqTkMUohk/VfJSkvyI-dI/AAAAAAAAEJk/Waum2493YRI/s651-Ic42/Kumar-Sangakkara.jpg"
+        },        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Batting Sanga",
+          "source": "https://lh3.googleusercontent.com/-h4hvBh68zSE/VfJSobIUCyI/AAAAAAAAEJ0/vKCL7i_Lzto/s650-Ic42/770604-6a606394-bbd7-11e4-a901-79cc3d20af7b.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-h4hvBh68zSE/VfJSobIUCyI/AAAAAAAAEJ0/vKCL7i_Lzto/s650-Ic42/770604-6a606394-bbd7-11e4-a901-79cc3d20af7b.jpg",
+          "url": "https://lh3.googleusercontent.com/-h4hvBh68zSE/VfJSobIUCyI/AAAAAAAAEJ0/vKCL7i_Lzto/s650-Ic42/770604-6a606394-bbd7-11e4-a901-79cc3d20af7b.jpg"
+        },        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Stylish Batsman",
+          "source": "https://lh3.googleusercontent.com/-CCKjYRcnMZA/VfJSqINRByI/AAAAAAAAEJ8/rZwUhSiZbRo/s480-Ic42/162447.2.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-CCKjYRcnMZA/VfJSqINRByI/AAAAAAAAEJ8/rZwUhSiZbRo/s480-Ic42/162447.2.jpg",
+          "url": "https://lh3.googleusercontent.com/-CCKjYRcnMZA/VfJSqINRByI/AAAAAAAAEJ8/rZwUhSiZbRo/s480-Ic42/162447.2.jpg"
+        },        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Sangakkara Kumar",
+          "source": "https://lh3.googleusercontent.com/-FxPTXskSmI0/VfJSqpBCQ9I/AAAAAAAAEKE/0iU1uSm9WQM/s604-Ic42/Kumar_Sangakkara%252520%2525281%252529.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-FxPTXskSmI0/VfJSqpBCQ9I/AAAAAAAAEKE/0iU1uSm9WQM/s604-Ic42/Kumar_Sangakkara%252520%2525281%252529.jpg",
+          "url": "https://lh3.googleusercontent.com/-FxPTXskSmI0/VfJSqpBCQ9I/AAAAAAAAEKE/0iU1uSm9WQM/s604-Ic42/Kumar_Sangakkara%252520%2525281%252529.jpg"
+        },        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Lawyer Sanga",
+          "source": "https://lh3.googleusercontent.com/-qOV15_nYWE8/VfJSssuiNRI/AAAAAAAAEKM/7yEDC5iPh5E/s350-Ic42/SL_Thinkwise_hub-page_Sanga.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-qOV15_nYWE8/VfJSssuiNRI/AAAAAAAAEKM/7yEDC5iPh5E/s350-Ic42/SL_Thinkwise_hub-page_Sanga.jpg",
+          "url": "https://lh3.googleusercontent.com/-qOV15_nYWE8/VfJSssuiNRI/AAAAAAAAEKM/7yEDC5iPh5E/s350-Ic42/SL_Thinkwise_hub-page_Sanga.jpg"
+        },        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Sanga Batting",
+          "source": "https://lh3.googleusercontent.com/-FiMiah5Lmlk/VfJSxKahpLI/AAAAAAAAEKU/AhABzFtR6qI/s600-Ic42/RTR33PIJ.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-FiMiah5Lmlk/VfJSxKahpLI/AAAAAAAAEKU/AhABzFtR6qI/s600-Ic42/RTR33PIJ.jpg",
+          "url": "https://lh3.googleusercontent.com/-FiMiah5Lmlk/VfJSxKahpLI/AAAAAAAAEKU/AhABzFtR6qI/s600-Ic42/RTR33PIJ.jpg"
+        },        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Batting",
+          "source": "https://lh3.googleusercontent.com/-FQeUAM_3UFs/VfJS02qOLOI/AAAAAAAAEKc/QncWBLdN4AM/s628-Ic42/Sri-Lankan-batsman-Kumar-Sangakkara-in-action-during-second-ODI-match-between-India-and-Sri-Lanka-at-Sardar-Patel-Cricket5.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-FQeUAM_3UFs/VfJS02qOLOI/AAAAAAAAEKc/QncWBLdN4AM/s628-Ic42/Sri-Lankan-batsman-Kumar-Sangakkara-in-action-during-second-ODI-match-between-India-and-Sri-Lanka-at-Sardar-Patel-Cricket5.jpg",
+          "url": "https://lh3.googleusercontent.com/-FQeUAM_3UFs/VfJS02qOLOI/AAAAAAAAEKc/QncWBLdN4AM/s628-Ic42/Sri-Lankan-batsman-Kumar-Sangakkara-in-action-during-second-ODI-match-between-India-and-Sri-Lanka-at-Sardar-Patel-Cricket5.jpg"
+        }
+      ]
     }
-    ] 
+  ]
 }
