--- a/sanga-walls-manifest.json
+++ b/sanga-walls-manifest.json
@@ -117,6 +117,17 @@
           "source": "https://lh3.googleusercontent.com/-FQeUAM_3UFs/VfJS02qOLOI/AAAAAAAAEKc/QncWBLdN4AM/s628-Ic42/Sri-Lankan-batsman-Kumar-Sangakkara-in-action-during-second-ODI-match-between-India-and-Sri-Lanka-at-Sardar-Patel-Cricket5.jpg",
           "thumbUrl": "https://lh3.googleusercontent.com/-FQeUAM_3UFs/VfJS02qOLOI/AAAAAAAAEKc/QncWBLdN4AM/s628-Ic42/Sri-Lankan-batsman-Kumar-Sangakkara-in-action-during-second-ODI-match-between-India-and-Sri-Lanka-at-Sardar-Patel-Cricket5.jpg",
           "url": "https://lh3.googleusercontent.com/-FQeUAM_3UFs/VfJS02qOLOI/AAAAAAAAEKc/QncWBLdN4AM/s628-Ic42/Sri-Lankan-batsman-Kumar-Sangakkara-in-action-during-second-ODI-match-between-India-and-Sri-Lanka-at-Sardar-Patel-Cricket5.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Cricket ICC",
+          "author_url": "http://www.icc-cricket.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Sanga!",
+          "source": "https://lh3.googleusercontent.com/-D0jXMUy-JWQ/VfJWpi4m7QI/AAAAAAAAEK4/UjBMeoxDSGY/s512-Ic42/KS-121514.jpeg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-D0jXMUy-JWQ/VfJWpi4m7QI/AAAAAAAAEK4/UjBMeoxDSGY/s512-Ic42/KS-121514.jpeg",
+          "url": "https://lh3.googleusercontent.com/-D0jXMUy-JWQ/VfJWpi4m7QI/AAAAAAAAEK4/UjBMeoxDSGY/s512-Ic42/KS-121514.jpeg"
         }
       ]
     }
