--- a/rugby-walls-manifest.json
+++ b/rugby-walls-manifest.json
@@ -1,133 +1,150 @@
 {
   "category": [
     {
-      "name": "Sanga Cricket Wallpapers",
+      "name": "Rugby Wallpapers HD",
       "wallpaper": [
         {
           "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
           "license_name": "CC-BY-2.0",
           "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Sanga's Look!",
-          "source": "https://lh3.googleusercontent.com/-3B5MFkBu4Q4/VfJSaFpHPcI/AAAAAAAAEJE/_x9uWTi8SaI/s620-Ic42/Kumar_Sangakkara%252520%2525282%252529.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-3B5MFkBu4Q4/VfJSaFpHPcI/AAAAAAAAEJE/_x9uWTi8SaI/s620-Ic42/Kumar_Sangakkara%252520%2525282%252529.jpg",
-          "url": "https://lh3.googleusercontent.com/-3B5MFkBu4Q4/VfJSaFpHPcI/AAAAAAAAEJE/_x9uWTi8SaI/s620-Ic42/Kumar_Sangakkara%252520%2525282%252529.jpg"
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-bGPv8lntWfw/Vf0_hM_N_5I/AAAAAAAAENs/yHZVeAdVA5U/s720-Ic42/Rugby-Images.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-bGPv8lntWfw/Vf0_hM_N_5I/AAAAAAAAENs/yHZVeAdVA5U/s720-Ic42/Rugby-Images.jpg",
+          "url": "https://lh3.googleusercontent.com/-bGPv8lntWfw/Vf0_hM_N_5I/AAAAAAAAENs/yHZVeAdVA5U/s720-Ic42/Rugby-Images.jpg"
         },
         {
           "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
           "license_name": "CC-BY-2.0",
           "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Sanga the legend",
-          "source": "https://lh3.googleusercontent.com/-uLAaE_3DEY4/VfJSbxuE9xI/AAAAAAAAEJM/4erPYm880iE/s540-Ic42/483087065_1396828681_540x540.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-uLAaE_3DEY4/VfJSbxuE9xI/AAAAAAAAEJM/4erPYm880iE/s540-Ic42/483087065_1396828681_540x540.jpg",
-          "url": "https://lh3.googleusercontent.com/-uLAaE_3DEY4/VfJSbxuE9xI/AAAAAAAAEJM/4erPYm880iE/s540-Ic42/483087065_1396828681_540x540.jpg"
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-Ci8l_be3vas/Vf0_i5SetlI/AAAAAAAAEN0/uqtbtO9X1Zg/s720-Ic42/Rugby-Pictures-1.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-Ci8l_be3vas/Vf0_i5SetlI/AAAAAAAAEN0/uqtbtO9X1Zg/s720-Ic42/Rugby-Pictures-1.jpg",
+          "url": "https://lh3.googleusercontent.com/-Ci8l_be3vas/Vf0_i5SetlI/AAAAAAAAEN0/uqtbtO9X1Zg/s720-Ic42/Rugby-Pictures-1.jpg"
         },
         {
           "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
           "license_name": "CC-BY-2.0",
           "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Worried Sanga",
-          "source": "https://lh3.googleusercontent.com/-OmeQzFikNes/VfJSd0MFUoI/AAAAAAAAEJU/0bci4UfKncY/s576-Ic42/220361.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-OmeQzFikNes/VfJSd0MFUoI/AAAAAAAAEJU/0bci4UfKncY/s576-Ic42/220361.jpg",
-          "url": "https://lh3.googleusercontent.com/-OmeQzFikNes/VfJSd0MFUoI/AAAAAAAAEJU/0bci4UfKncY/s576-Ic42/220361.jpg"
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-wyvWq7Bs54s/Vf0_kkC0FVI/AAAAAAAAEN8/Ool8nXAbaek/s720-Ic42/Rugby-Photos-2.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-wyvWq7Bs54s/Vf0_kkC0FVI/AAAAAAAAEN8/Ool8nXAbaek/s720-Ic42/Rugby-Photos-2.jpg",
+          "url": "https://lh3.googleusercontent.com/-wyvWq7Bs54s/Vf0_kkC0FVI/AAAAAAAAEN8/Ool8nXAbaek/s720-Ic42/Rugby-Photos-2.jpg"
         },
         {
           "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
           "license_name": "CC-BY-2.0",
           "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Proud Sri Lankan Lion",
-          "source": "https://lh3.googleusercontent.com/-ovEgHG8vbCw/VfJSh4W5C_I/AAAAAAAAEJc/GI4Zi799l3s/s720-Ic42/Kumar_Sangakkara.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-ovEgHG8vbCw/VfJSh4W5C_I/AAAAAAAAEJc/GI4Zi799l3s/s720-Ic42/Kumar_Sangakkara.jpg",
-          "url": "https://lh3.googleusercontent.com/-ovEgHG8vbCw/VfJSh4W5C_I/AAAAAAAAEJc/GI4Zi799l3s/s720-Ic42/Kumar_Sangakkara.jpg"
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-zjtVEeeVpcE/Vf0_nEt8heI/AAAAAAAAEOE/dwECKebXe4s/s720-Ic42/Rugby-Images-2.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-zjtVEeeVpcE/Vf0_nEt8heI/AAAAAAAAEOE/dwECKebXe4s/s720-Ic42/Rugby-Images-2.jpg",
+          "url": "https://lh3.googleusercontent.com/-zjtVEeeVpcE/Vf0_nEt8heI/AAAAAAAAEOE/dwECKebXe4s/s720-Ic42/Rugby-Images-2.jpg"
         },
         {
           "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
           "license_name": "CC-BY-2.0",
           "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Keeper Sanga",
-          "source": "https://lh3.googleusercontent.com/-sXjqTkMUohk/VfJSkvyI-dI/AAAAAAAAEJk/Waum2493YRI/s651-Ic42/Kumar-Sangakkara.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-sXjqTkMUohk/VfJSkvyI-dI/AAAAAAAAEJk/Waum2493YRI/s651-Ic42/Kumar-Sangakkara.jpg",
-          "url": "https://lh3.googleusercontent.com/-sXjqTkMUohk/VfJSkvyI-dI/AAAAAAAAEJk/Waum2493YRI/s651-Ic42/Kumar-Sangakkara.jpg"
-        },        {
-          "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
-          "license_name": "CC-BY-2.0",
-          "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Batting Sanga",
-          "source": "https://lh3.googleusercontent.com/-h4hvBh68zSE/VfJSobIUCyI/AAAAAAAAEJ0/vKCL7i_Lzto/s650-Ic42/770604-6a606394-bbd7-11e4-a901-79cc3d20af7b.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-h4hvBh68zSE/VfJSobIUCyI/AAAAAAAAEJ0/vKCL7i_Lzto/s650-Ic42/770604-6a606394-bbd7-11e4-a901-79cc3d20af7b.jpg",
-          "url": "https://lh3.googleusercontent.com/-h4hvBh68zSE/VfJSobIUCyI/AAAAAAAAEJ0/vKCL7i_Lzto/s650-Ic42/770604-6a606394-bbd7-11e4-a901-79cc3d20af7b.jpg"
-        },        {
-          "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
-          "license_name": "CC-BY-2.0",
-          "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Stylish Batsman",
-          "source": "https://lh3.googleusercontent.com/-CCKjYRcnMZA/VfJSqINRByI/AAAAAAAAEJ8/rZwUhSiZbRo/s480-Ic42/162447.2.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-CCKjYRcnMZA/VfJSqINRByI/AAAAAAAAEJ8/rZwUhSiZbRo/s480-Ic42/162447.2.jpg",
-          "url": "https://lh3.googleusercontent.com/-CCKjYRcnMZA/VfJSqINRByI/AAAAAAAAEJ8/rZwUhSiZbRo/s480-Ic42/162447.2.jpg"
-        },        {
-          "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
-          "license_name": "CC-BY-2.0",
-          "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Sangakkara Kumar",
-          "source": "https://lh3.googleusercontent.com/-FxPTXskSmI0/VfJSqpBCQ9I/AAAAAAAAEKE/0iU1uSm9WQM/s604-Ic42/Kumar_Sangakkara%252520%2525281%252529.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-FxPTXskSmI0/VfJSqpBCQ9I/AAAAAAAAEKE/0iU1uSm9WQM/s604-Ic42/Kumar_Sangakkara%252520%2525281%252529.jpg",
-          "url": "https://lh3.googleusercontent.com/-FxPTXskSmI0/VfJSqpBCQ9I/AAAAAAAAEKE/0iU1uSm9WQM/s604-Ic42/Kumar_Sangakkara%252520%2525281%252529.jpg"
-        },        {
-          "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
-          "license_name": "CC-BY-2.0",
-          "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Lawyer Sanga",
-          "source": "https://lh3.googleusercontent.com/-qOV15_nYWE8/VfJSssuiNRI/AAAAAAAAEKM/7yEDC5iPh5E/s350-Ic42/SL_Thinkwise_hub-page_Sanga.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-qOV15_nYWE8/VfJSssuiNRI/AAAAAAAAEKM/7yEDC5iPh5E/s350-Ic42/SL_Thinkwise_hub-page_Sanga.jpg",
-          "url": "https://lh3.googleusercontent.com/-qOV15_nYWE8/VfJSssuiNRI/AAAAAAAAEKM/7yEDC5iPh5E/s350-Ic42/SL_Thinkwise_hub-page_Sanga.jpg"
-        },        {
-          "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
-          "license_name": "CC-BY-2.0",
-          "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Sanga Batting",
-          "source": "https://lh3.googleusercontent.com/-FiMiah5Lmlk/VfJSxKahpLI/AAAAAAAAEKU/AhABzFtR6qI/s600-Ic42/RTR33PIJ.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-FiMiah5Lmlk/VfJSxKahpLI/AAAAAAAAEKU/AhABzFtR6qI/s600-Ic42/RTR33PIJ.jpg",
-          "url": "https://lh3.googleusercontent.com/-FiMiah5Lmlk/VfJSxKahpLI/AAAAAAAAEKU/AhABzFtR6qI/s600-Ic42/RTR33PIJ.jpg"
-        },        {
-          "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
-          "license_name": "CC-BY-2.0",
-          "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Batting",
-          "source": "https://lh3.googleusercontent.com/-FQeUAM_3UFs/VfJS02qOLOI/AAAAAAAAEKc/QncWBLdN4AM/s628-Ic42/Sri-Lankan-batsman-Kumar-Sangakkara-in-action-during-second-ODI-match-between-India-and-Sri-Lanka-at-Sardar-Patel-Cricket5.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-FQeUAM_3UFs/VfJS02qOLOI/AAAAAAAAEKc/QncWBLdN4AM/s628-Ic42/Sri-Lankan-batsman-Kumar-Sangakkara-in-action-during-second-ODI-match-between-India-and-Sri-Lanka-at-Sardar-Patel-Cricket5.jpg",
-          "url": "https://lh3.googleusercontent.com/-FQeUAM_3UFs/VfJS02qOLOI/AAAAAAAAEKc/QncWBLdN4AM/s628-Ic42/Sri-Lankan-batsman-Kumar-Sangakkara-in-action-during-second-ODI-match-between-India-and-Sri-Lanka-at-Sardar-Patel-Cricket5.jpg"
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-3xnoiawAwTE/Vf0_o2z1eFI/AAAAAAAAEOM/jBhYy3Oqeb8/s720-Ic42/Rugby-Pictures-2.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-3xnoiawAwTE/Vf0_o2z1eFI/AAAAAAAAEOM/jBhYy3Oqeb8/s720-Ic42/Rugby-Pictures-2.jpg",
+          "url": "https://lh3.googleusercontent.com/-3xnoiawAwTE/Vf0_o2z1eFI/AAAAAAAAEOM/jBhYy3Oqeb8/s720-Ic42/Rugby-Pictures-2.jpg"
         },
         {
           "attribution": null,
-          "author": "Cricket ICC",
-          "author_url": "http://www.icc-cricket.com/",
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
           "license_name": "CC-BY-2.0",
           "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "Sanga!",
-          "source": "https://lh3.googleusercontent.com/-D0jXMUy-JWQ/VfJWpi4m7QI/AAAAAAAAEK4/UjBMeoxDSGY/s512-Ic42/KS-121514.jpeg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-D0jXMUy-JWQ/VfJWpi4m7QI/AAAAAAAAEK4/UjBMeoxDSGY/s512-Ic42/KS-121514.jpeg",
-          "url": "https://lh3.googleusercontent.com/-D0jXMUy-JWQ/VfJWpi4m7QI/AAAAAAAAEK4/UjBMeoxDSGY/s512-Ic42/KS-121514.jpeg"
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-GqWV799yWUk/Vf0_qns2ipI/AAAAAAAAEOU/RWteY4j7U8M/s720-Ic42/Rugby-Pictures.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-GqWV799yWUk/Vf0_qns2ipI/AAAAAAAAEOU/RWteY4j7U8M/s720-Ic42/Rugby-Pictures.jpg",
+          "url": "https://lh3.googleusercontent.com/-GqWV799yWUk/Vf0_qns2ipI/AAAAAAAAEOU/RWteY4j7U8M/s720-Ic42/Rugby-Pictures.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-u0bB5oNpzB0/Vf0_rw803LI/AAAAAAAAEOc/whjn9fkRfXI/s640-Ic42/Rugby-Photos-1.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-u0bB5oNpzB0/Vf0_rw803LI/AAAAAAAAEOc/whjn9fkRfXI/s640-Ic42/Rugby-Photos-1.jpg",
+          "url": "https://lh3.googleusercontent.com/-u0bB5oNpzB0/Vf0_rw803LI/AAAAAAAAEOc/whjn9fkRfXI/s640-Ic42/Rugby-Photos-1.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-UCUHWWos80s/Vf0_thquDEI/AAAAAAAAEOk/ZjgV-zmwjRA/s640-Ic42/Rugby-Photos.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-UCUHWWos80s/Vf0_thquDEI/AAAAAAAAEOk/ZjgV-zmwjRA/s640-Ic42/Rugby-Photos.jpg",
+          "url": "https://lh3.googleusercontent.com/-UCUHWWos80s/Vf0_thquDEI/AAAAAAAAEOk/ZjgV-zmwjRA/s640-Ic42/Rugby-Photos.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-ntEIe8b550k/Vf0_uzjGhqI/AAAAAAAAEOs/JXuq3gZhN3A/s700-Ic42/Rugby-Images-1.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-ntEIe8b550k/Vf0_uzjGhqI/AAAAAAAAEOs/JXuq3gZhN3A/s700-Ic42/Rugby-Images-1.jpg",
+          "url": "https://lh3.googleusercontent.com/-ntEIe8b550k/Vf0_uzjGhqI/AAAAAAAAEOs/JXuq3gZhN3A/s700-Ic42/Rugby-Images-1.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-TpyvbcmvLWA/Vf0_wI53LxI/AAAAAAAAEO0/Gjks9AurA4Q/s720-Ic42/i_love_rugby_by_jvalle-d4673q3.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-TpyvbcmvLWA/Vf0_wI53LxI/AAAAAAAAEO0/Gjks9AurA4Q/s720-Ic42/i_love_rugby_by_jvalle-d4673q3.jpg",
+          "url": "https://lh3.googleusercontent.com/-TpyvbcmvLWA/Vf0_wI53LxI/AAAAAAAAEO0/Gjks9AurA4Q/s720-Ic42/i_love_rugby_by_jvalle-d4673q3.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-p01mp6QtBSk/Vf0_w33hIFI/AAAAAAAAEO8/I4pYMtbn10E/s750-Ic42/101006055822_95.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-p01mp6QtBSk/Vf0_w33hIFI/AAAAAAAAEO8/I4pYMtbn10E/s750-Ic42/101006055822_95.jpg",
+          "url": "https://lh3.googleusercontent.com/-p01mp6QtBSk/Vf0_w33hIFI/AAAAAAAAEO8/I4pYMtbn10E/s750-Ic42/101006055822_95.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-rbm4CNlj-0U/Vf0_yXOopGI/AAAAAAAAEPE/wodeDzi9kv0/s720-Ic42/479478.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-rbm4CNlj-0U/Vf0_yXOopGI/AAAAAAAAEPE/wodeDzi9kv0/s720-Ic42/479478.jpg",
+          "url": "https://lh3.googleusercontent.com/-rbm4CNlj-0U/Vf0_yXOopGI/AAAAAAAAEPE/wodeDzi9kv0/s720-Ic42/479478.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-KSYW1dYSxnM/Vf0_0PETloI/AAAAAAAAEPM/D3ZJVoAZGQs/s720-Ic42/rugby-wallpaper-hd-6-711090.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-KSYW1dYSxnM/Vf0_0PETloI/AAAAAAAAEPM/D3ZJVoAZGQs/s720-Ic42/rugby-wallpaper-hd-6-711090.jpg",
+          "url": "https://lh3.googleusercontent.com/-KSYW1dYSxnM/Vf0_0PETloI/AAAAAAAAEPM/D3ZJVoAZGQs/s720-Ic42/rugby-wallpaper-hd-6-711090.jpg"
         }
       ]
     }
