--- a/rugby-walls-manifest.json
+++ b/rugby-walls-manifest.json
@@ -145,6 +145,17 @@
           "source": "https://lh3.googleusercontent.com/-KSYW1dYSxnM/Vf0_0PETloI/AAAAAAAAEPM/D3ZJVoAZGQs/s720-Ic42/rugby-wallpaper-hd-6-711090.jpg",
           "thumbUrl": "https://lh3.googleusercontent.com/-KSYW1dYSxnM/Vf0_0PETloI/AAAAAAAAEPM/D3ZJVoAZGQs/s720-Ic42/rugby-wallpaper-hd-6-711090.jpg",
           "url": "https://lh3.googleusercontent.com/-KSYW1dYSxnM/Vf0_0PETloI/AAAAAAAAEPM/D3ZJVoAZGQs/s720-Ic42/rugby-wallpaper-hd-6-711090.jpg"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby World",
+          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "",
+          "source": "https://lh3.googleusercontent.com/-OaBz5QraQ5Y/Vf1FU83LAyI/AAAAAAAAEPk/MEyOxdbdv0s/s500-Ic42/28521.jpg",
+          "thumbUrl": "https://lh3.googleusercontent.com/-OaBz5QraQ5Y/Vf1FU83LAyI/AAAAAAAAEPk/MEyOxdbdv0s/s500-Ic42/28521.jpg",
+          "url": "https://lh3.googleusercontent.com/-OaBz5QraQ5Y/Vf1FU83LAyI/AAAAAAAAEPk/MEyOxdbdv0s/s500-Ic42/28521.jpg"
         }
       ]
     }
