--- a/rugby-walls-manifest.json
+++ b/rugby-walls-manifest.json
@@ -1,7 +1,7 @@
 {
   "category": [
     {
-      "name": "Rugby Wallpapers HD",
+      "name": "Rugby 2015 Wallpapers HD",
       "wallpaper": [
         {
           "attribution": null,
